--- a/tasks/templates/tasks/navbar.html
+++ b/tasks/templates/tasks/navbar.html
@@ -1,10 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
     <div class="container">
         <a class="navbar-brand fw-bold" href="#">ScrollToDo</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <div class="justify-content-end" id="navbarNav">
             <a href="login.html" class="btn btn-outline-primary">Sign In</a>
         </div>
     </div>
