--- a/tasks/templates/tasks/navbar.html
+++ b/tasks/templates/tasks/navbar.html
@@ -1,6 +1,10 @@
+{% load static %}
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
     <div class="container">
-        <a class="navbar-brand fw-bold" href="#">ScrollToDo</a>
+        <a class="navbar-brand fw-bold" href="{% if user.is_authenticated %}{% url 'dashboard' %}{% else %}{% url 'index' %}{% endif %}">
+            <img src="{% get_media_prefix %}Logo.svg" alt="Logo" style="height: 30px; margin-right: 8px;">
+            <span style="font-weight: bold; color: var(--dark-gray);">ScrollToDo</span>
+        </a>
         <div class="justify-content-end" id="navbarNav">
             <a href="login.html" class="btn btn-outline-primary">Sign In</a>
         </div>
