Add login page and modals

--- a/tasks/templates/tasks/navbar.html
+++ b/tasks/templates/tasks/navbar.html
@@ -6,7 +6,7 @@
             <span style="font-weight: bold; color: var(--dark-gray);">ScrollToDo</span>
         </a>
         <div class="justify-content-end" id="navbarNav">
-            <a href="login.html" class="btn btn-outline-primary">Sign In</a>
+            <a href="#" data-toggle="modal" data-target="#authModal" class="btn btn-outline-primary">Sign In</a>
         </div>
     </div>
 </nav>
