Update change password UX

--- a/tasks/static/tasks/styles.css
+++ b/tasks/static/tasks/styles.css
@@ -95,3 +95,8 @@ header {
 .danger {
     color: var(--danger-red);
 }
+
+/* Use CSS to hide the error messages initially. */
+.errorlist {
+    display: none;
+}
