--- a/tasks/templates/tasks/account.html
+++ b/tasks/templates/tasks/account.html
@@ -16,10 +16,10 @@
     <!-- Navigation Bar -->
     {% include 'tasks/navbar.html' %}
 
-    <div class="container mt-5">
+    <div class="container my-5">
         <div class="d-flex justify-content-between align-items-center mb-4">
             <h2>Account Details</h2>
-            <a href="javascript:history.back()" class="btn btn-secondary">Back</a>
+            <a href="javascript:history.back()" class="btn btn-secondary"><i class="fas fa-arrow-left"></i> Back</a>
         </div>
         {% if messages %}
             <div class="alert alert-success">
@@ -31,42 +31,49 @@
         <form method="post" class="needs-validation" novalidate>
             {% csrf_token %}
             <div class="form-row">
-                <div class="form-group col-md-6">
+                <div class="form-group col-12 col-md-6">
                     <label for="username">Username</label>
                     <input type="text" class="form-control" id="username" name="username" value="{{ user.username }}" required>
                     <div class="invalid-feedback">
                         Please enter your username.
                     </div>
                 </div>
-                <div class="form-group col-md-6">
+                <div class="form-group col-12 col-md-6">
                     <label for="email">Email address</label>
                     <input type="email" class="form-control" id="email" name="email" value="{{ user.email }}" required>
                     <div class="invalid-feedback">
                         Please enter a valid email address.
                     </div>
                 </div>
-            </div>
-            <div class="form-row">
-                <div class="form-group col-md-6">
+            
+            
+                <div class="form-group col-12 col-md-6">
                     <label for="date_joined">Account creation date</label>
                     <input type="text" class="form-control" id="date_joined" value="{{ user.date_joined }}" readonly>
                 </div>
-                <div class="form-group col-md-6">
+                <div class="form-group col-12 col-md-6">
                     <label for="last_login">Last login timestamp</label>
                     <input type="text" class="form-control" id="last_login" value="{{ user.last_login }}" readonly>
                 </div>
-            </div>
-            <button type="submit" class="btn btn-primary">Update</button>
+            
+            <button type="submit" class="btn btn-primary btn-block">Update</button>
         </form>
-        <a href="{% url 'logout' %}" class="btn btn-danger mt-3">Logout</a>
 
-        <h3 class="mt-5">Change Password</h3>
+        <div class="form-group col-12 col-md-6">
+            <h3 class="mt-5">Change Password</h3>
         <form method="post" action="{% url 'change_password' %}">
+            
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="btn btn-primary">Change Password</button>
+            <button type="submit" class="btn btn-primary btn-block"><i class="fas fa-lock"></i> Change Password</button>
+        
         </form>
     </div>
+        <a href="{% url 'logout' %}" class="btn btn-danger btn-block mt-3"><i class="fas fa-sign-out-alt"></i> Logout</a>
+    </div>
+</div>
+            
+    
 
     <!-- Footer -->
     {% include 'tasks/footer.html' %}
