--- a/tasks/templates/tasks/change_password.html
+++ b/tasks/templates/tasks/change_password.html
@@ -16,10 +16,10 @@
     <!-- Navigation Bar -->
     {% include 'tasks/navbar.html' %}
 
-    <div class="container mt-5">
+    <div class="container my-5">
         <div class="d-flex justify-content-between align-items-center mb-4">
             <h2>Change Password</h2>
-            <a href="{% url 'account' %}" class="btn btn-secondary">Back to Account</a>
+            <a href="{% url 'account' %}" class="btn btn-secondary"><i class="fas fa-arrow-left"></i> Back</a>
         </div>
         {% if messages %}
             <div class="alert alert-success">
@@ -51,7 +51,7 @@
             <div class="form-group">
                 <label for="new_password_confirmation">New Password Confirmation</label>
                 <input type="password" class="form-control" id="new_password_confirmation" name="new_password_confirmation" required>
-                <div id="password-match-error" class="text-danger mt-2" style="display: none;">Passwords do not match</div>
+                <div id="password-match-error" class="text-danger mt-2" style="display: none;"><i class="fa fa-times"></i> Passwords do not match</div>
             </div>
             <button type="submit" class="btn btn-primary btn-block">Change Password</button>
         </form>
